--- a/CSS/estilosForm.css
+++ b/CSS/estilosForm.css
@@ -1,5 +1,186 @@
+
+body{
+    background: #999C9B
+}
+
 .form{
     
+    border-radius: 30px;
+    width: 430px;
+    height: 660px;
+    margin: 50px;
+    margin-top: 100px;
+    display:flex;
+    box-shadow:0px 0px 20px rgba(0,0,0,0.6);
+    flex-wrap: wrap;
+    
+}
 
 
+.info_usuario{
+    
+    padding:30px;
+    position: relative;
+    border-radius: 30px;
+    background: #51DAAC;
+    z-index: 2;
+    top:-170px;
+    height: 490px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-color: white;
+    border-style: solid;
+    border-bottom-width: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    flex-direction: column;
+    font-size: 25px;
+    width: 430px;
+}
+
+
+.form_banner{
+
+    padding:30px;
+    z-index: 20;
+    height: 170px;
+    border-radius: 30px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    width: 430px;
+    background: grey;
+    position: relative;
+    top:490px;
+    border-color: white;
+    border-top-width: 10px;
+    border-style:solid;
+    
+
+}
+
+
+    
+.info_usuario h2,label{
+    
+    text-align: start;
+    padding-bottom: 5px;
+    
+    
+    
+}
+
+
+.info_usuario input, textarea {
+    padding: 5px 0px;
+    border: 10px;
+    background: #51DAAC;
+    border-bottom-color: black;
+    border-bottom-style: solid;
+    border-bottom-width: 1.5px;
+    margin-bottom:5px;
+    
+    
+    
+    font-weight: 400;
+    color: #5A5A5A;
+         
+}
+
+
+.info_usuario button{
+    border-width: 10px;
+    border-style: solid;
+    border-color: black;
+    
+    
+}
+
+#btnSend:hover{
+    cursor:pointer;
+    background:  #B3D7CB;   
+    
+    
+}
+
+
+#btnSend{
+    background: #CB9B41;
+    box-shadow:0px 0px 20px rgba(0,0,0,0.6);
+    margin-top: 13px;
+    padding: 6px;
+    border-style: solid;
+    border-left-color: black;
+    border-width: 1px;
+    border-radius: 30px;
+    
+    
+}
+
+:focus {
+    outline:none;
+}
+
+
+/*VENTANA DE ERRORES*/
+
+
+.error{
+    width:100%;
+    height: 100vh;
+    background: rgba(0,0,0,0.7);
+    
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 3;
+    
+    display:flex;
+    justify-content: center;
+    align-items:center;
+}
+
+.mensaje_error{
+    background: #fff;
+    box-shadow:0px 0px 20px rgba(0,0,0,0.6);
+    width: 400px;
+    padding: 30px 20px 15px;
+    
+    
+    
+}
+
+.mensaje_error h3{
+    text-align: center;
+    font-size: 23px;
+    font-weight: 400
+        
+    
+    
+}
+
+
+.mensaje_error h3:after{
+    content: '';
+    display:block;
+    width:100%;
+    height: 1px;
+    background: #c5c5c5;
+    margin:10px 0px 15px;
+        
+    
+    
+}
+
+.mensaje_error #btnCerrar{
+    padding:7px 35px 7px;
+    float:right;
+    cursor:pointer;
+    background:#CB9B41;
+    border-radius: 30px;
+    border-color:black;
+    border-style: solid;
+    border-width:1px;
+    box-shadow:0px 0px 20px rgba(0,0,0,0.6);
+    
 }
