Proyecto para el ramo de desarrollo web en DUOC

--- a/CSS/estilosForm.css
+++ b/CSS/estilosForm.css
@@ -3,6 +3,16 @@ body{
     background: #999C9B
 }
 
+@media (min-width:1024px){
+    .form{
+            position: relative;
+            left: 430px
+        
+    }
+
+}
+
+
 .form{
     
     border-radius: 30px;
