--- a/CSS/banner.css
+++ b/CSS/banner.css
@@ -1,45 +1,38 @@
 #banner {
-    margin-top: 50px;
-    position: relative;
-    
-    
+  margin-top: 50px;
+  position: relative;
 }
 
 #banner img {
-    width: 100%;
-    height 100%;
+  width: 100%;
+  height: 100%;
 }
 
-#banner .contenedor{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    color: aliceblue;
+#banner .contenedor {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  color: aliceblue;
 }
 
-#banner h2{
-    font-size: 28px;
+#banner h2 {
+  font-size: 28px;
 }
 
-#banner a{
-    display: block;
-    width: 100px;
-    color: aliceblue;
-    text-decoration: none;
-    padding: 2px;
-    margin-top: 5px;
-    border: 3px solid #fff;
-    
-    
+#banner a {
+  display: block;
+  width: 100px;
+  color: aliceblue;
+  text-decoration: none;
+  padding: 2px;
+  margin-top: 5px;
+  border: 3px solid #fff;
 }
 
-#banner p{
-   
+#banner p {
 }
 
 #banner a:hover {
-    background: rgba(202,216,212);
+  background: rgba(202, 216, 212);
 }
-
-
